k8s-cloud/worker.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  namespace: task-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker
          image: taskregistry1.azurecr.io/worker:latest
          imagePullPolicy: Always
