k8s-cloud/frontend.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: task-system

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: taskregistry1.azurecr.io/frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: task-system

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 3000
