k8s-cloud/postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: task-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres

          image: postgres:15

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

            - name: init-script
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

        - name: init-script
          configMap:
            name: postgres-init-script

---
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: task-system

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
