k8s-cloud/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: task-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
      - name: redis
        image: redis:7

        ports:
        - containerPort: 6379

        volumeMounts:
        - name: redis-storage
          mountPath: /data

      volumes:
      - name: redis-storage
        persistentVolumeClaim:
          claimName: redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: task-system

spec:
  selector:
    app: redis

  ports:
  - port: 6379
    targetPort: 6379
