k8s-cloud/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-app

spec:
  selector:
    app: task-app

  ports:
  - port: 80
    targetPort: 3000

  type: LoadBalancer
